# find-python-projects-action

./: .eslintrc.json  .gitignore  LICENSE  README.md  action.yml  determine-skips.test.js  eslint.config.cjs  find-python-projects.js  find-python-projects.test.js  index.js  index.test.js  package-lock.json  package.json
.github/workflows/: check-dist.yml  test.yml
.github/workflows/examples/: example.yml
__snapshots__/: find-python-projects.test.js.snap
test-fixtures/invalid-project/: pyproject.toml
test-fixtures/multi-project/project-1/: pyproject.toml
test-fixtures/multi-project/project-2/: pyproject.toml
test-fixtures/multi-project/project-4/: pyproject.toml
test-fixtures/multi-project/project-5/: pyproject.toml
test-fixtures/multi-project/project-5/tests/: test_project.py
test-fixtures/multi-project/project-6/: pyproject.toml
test-fixtures/project-with-exports/: pyproject.toml
test-fixtures/single-project/: pyproject.toml
