[project]
name = "project-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BrandonLWhite", email = "brandonlwhite@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pdm.scripts]
test = "pytest"